--- a/css/main.css
+++ b/css/main.css
@@ -1,3 +1,14 @@
 body {
 	background-color: LightCoral;
 }
+
+#logo {
+	height: 8em;
+	width: 20em;
+}
+#logo a {
+	background: url("../img/logo.png") center no-repeat;
+	width: 100%;
+	height: 100%;
+	display: block;
+}
