--- a/css/main.css
+++ b/css/main.css
@@ -5,10 +5,15 @@ body {
 #logo {
 	height: 8em;
 	width: 20em;
+    margin-top: 1em;
 }
 #logo a {
 	background: url("../img/logo.png") center no-repeat;
 	width: 100%;
 	height: 100%;
 	display: block;
+}
+
+footer {
+    margin-top: 4em;
 }
