Start Monster Gallery

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,13 @@
 body {
-	background-color: LightCoral;
+	background-color: #8E62B2;
+}
+
+a {
+	color: white;
+}
+a:hover {
+	color: #E9C15D;
+	text-decoration: none;
 }
 
 #logo {
@@ -13,7 +21,9 @@ body {
 	height: 100%;
 	display: block;
 }
-
+input {
+	margin-bottom: .5rem;
+}
 #successful_comment { 
 	border-radius: 4px;
 	text-align: center;
@@ -27,6 +37,16 @@ body {
 	margin-top: 2em;
 }
 
+#comments {
+	background: #E9C15D;
+	padding: 1rem;
+	border-radius: 4px;
+}
+
 footer {
     margin-top: 4em;
+}
+
+#socialnav ul {
+	padding-left: .25rem;
 }
