--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,12 @@
+@import 'https://fonts.googleapis.com/css?family=Roboto:400,900';
+
 body {
 	background-color: #8E62B2;
+    font-family: 'Roboto', sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-weight: 900;
 }
 
 a {
@@ -20,6 +27,10 @@ a:hover {
 	width: 100%;
 	height: 100%;
 	display: block;
+}
+
+#pageTitle {
+    margin: 1.5rem 0;
 }
 
 .card-block {
@@ -55,6 +66,15 @@ input {
 	background: #E9C15D;
 	padding: 1rem;
 	border-radius: 4px;
+    padding: 2rem;
+}
+
+#comment-box hr {
+    border-color: GoldenRod;
+}
+
+#comment-box hr:last-of-type {
+    display: none;
 }
 
 footer {
@@ -63,4 +83,11 @@ footer {
 
 #socialnav ul {
 	padding-left: .25rem;
+}
+
+@media screen and (max-width: 62em) {
+    
+    #pageTitle, footer {
+        text-align: center;
+    }
 }
